--- a/index.html
+++ b/index.html
@@ -2,10 +2,18 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>San Joaquin Valley Town Hall</title>
 	<link rel="shortcut icon" href="images/favicon.ico">
-	<link rel="stylesheet" href="styles/main.css">
+	<link rel="stylesheet" href="styles/c8_main.css">
+	<link rel="stylesheet" href="styles/slicknav.css">
+	<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+	<script src="js/jquery.slicknav.min.js"></script>
+	<script type="text/javascript">
+		$(document).ready(function(){
+			$('#nav_menu').slicknav({prependTo:"#mobile_menu"});
+		});
+	</script>
 </head>
 
 <body>
@@ -15,6 +23,7 @@
 		<h3>Celebrating our <span class="shadow">75<sup>th</sup></span> Year</h3>
 	</header>
 
+	<nav id=mobile_menu></nav>
 	<nav id="nav_menu">
 		<ul>
 			<li><a href="index.html" class="current">Home</a></li>
@@ -76,6 +85,7 @@
 		</aside>
 	</main>
 	<footer>
-		<p>&copy; 11/8/2022 Jan Quimpo</p>	</footer>
+		<p>&copy; 11/22/2022 Jan Quimpo</p>
+	</footer>
 </body>
 </html>
